tests/parsing/smtlib/v2.7/errors/081_define-fun-rec_bad_name_1.smt2
(set-logic ALL)
(define-fun-rec _)
